adding blogcount to blog admin pages

--- a/Views/Parts/ContainerCommentsCountPart.cshtml
+++ b/Views/Parts/ContainerCommentsCountPart.cshtml
@@ -3,6 +3,7 @@
 
 @{
     ContainerCommentsCountPart myPart = Model.ContentPart;
+    Style.Include("blogcount.css");
 }
 
 <ul class="pageStatus">
@@ -11,3 +12,4 @@
         @T(" | ")&nbsp;
     </li>
 </ul>
+<div class="blogCountClear"></div>
